--- a/010_AI/my-app/package.json
+++ b/010_AI/my-app/package.json
@@ -12,15 +12,20 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/markdown-it": "^14.1.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.460.0",
+    "markdown-it": "^14.1.0",
     "marked": "^15.0.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
