--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "lexical-react-rte": "^0.1.70",
     "next": "15.0.4-canary.34",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.4.38",
