添加一些注释信息

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ps/PS基础入门课程素材/*
 014_nextjs_dashboard/node_modules/.pnpm/@types+node@22.10.1/node_modules/@types/node/index.d.ts
 /014_nextjs_dashboard/nextjs-dashboard/node_modules
+014_nextjs_dashboard/nextjs-dashboard/public/temp/input-1734482169107.mp4
+014_nextjs_dashboard/nextjs-dashboard/public/temp/*
