--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -6,12 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/language": "^6.10.7",
+    "@codemirror/legacy-modes": "^6.4.2",
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/forms": "^0.5.7",
+    "@uiw/react-codemirror": "^4.23.7",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.1",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
@@ -19,6 +23,7 @@
     "lexical-react-rte": "^0.1.70",
     "next": "15.0.4-canary.34",
     "next-auth": "5.0.0-beta.25",
+    "node-cron": "^3.0.3",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
