--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -20,8 +20,9 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.2",
+    "gray-matter": "^4.0.3",
     "lexical-react-rte": "^0.1.70",
-    "next": "15.0.4-canary.34",
+    "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
     "node-cron": "^3.0.3",
     "postcss": "8.4.38",
