--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -19,11 +19,11 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "formidable": "^3.5.2",
     "gray-matter": "^4.0.3",
     "lexical-react-rte": "^0.1.70",
     "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
+    "next-multiparty": "^0.7.0",
     "node-cron": "^3.0.3",
     "postcss": "8.4.38",
     "react": "18.3.1",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "20.14.8",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
@@ -44,7 +45,8 @@
   "pnpm": {
     "overrides": {
       "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+      "formidable": "^2.1.2"
     }
   }
 }
