--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@codemirror/language": "^6.10.7",
     "@codemirror/legacy-modes": "^6.4.2",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/forms": "^0.5.7",
     "@uiw/react-codemirror": "^4.23.7",
