--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -41,6 +41,7 @@
     "@types/node": "20.14.8",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "code-inspector-plugin": "^0.18.3",
     "eslint-config-next": "15.0.3"
   },
   "pnpm": {
