--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -15,13 +15,16 @@
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "gray-matter": "^4.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lexical-react-rte": "^0.1.70",
+    "mysql2": "^3.12.0",
     "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
     "next-multiparty": "^0.7.0",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.14.8",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
