--- a/014_nextjs_dashboard/nextjs-dashboard/package.json
+++ b/014_nextjs_dashboard/nextjs-dashboard/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
+    "echarts": "^5.6.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
